tello_ws/log/build_2024-04-17_16-49-07/pypackage/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/triton_07/Documents/framRobot/S1_G2_Machillot_Dridi/tello_ws/install/pypackage/lib/python3.10/site-packages/pypackage/tello_behavior.py", line 152
    else
        ^
SyntaxError: expected ':'

